--- a/src/main/resources/static/Resource/i18n/zh/wdgl/Questions_List.properties
+++ b/src/main/resources/static/Resource/i18n/zh/wdgl/Questions_List.properties
@@ -14,4 +14,14 @@ MODULE=模块
 PROMPT=提示
 SURETODO=确定执行此操作吗？
 selectLeastOneDataRowOperator=请至少选择一行数据操作
+HUAWEI_NO=华为云账号
+CONTACT_NAME=企业名称
+ACCOUNT_MANAGER=客户经理
+CONTACT_INFO=企业联系人
+HANDLER=处理人
+PRIORITY=优先级
+FEEDBACK_HUAWEI=反馈到华为
+HUAWEI_ANSWER=华为侧回复
+WORK_ORDER_NO=工单号
+QUESTION_DATE=提出时间
 
