拆件记录更新

--- a/src/main/resources/static/Resource/i18n/zh/cpgl/PurchaseManager.properties
+++ b/src/main/resources/static/Resource/i18n/zh/cpgl/PurchaseManager.properties
@@ -1,14 +1,17 @@
 #Fri Jun 21 16:53:05 CST 2019
-COMMON_SHEET_TITLE=对接人
+COMMON_SHEET_TITLE=对接人/单号
 SHEET_NO=进货单号
 RECEIVE_DATE=进货时间
 BOX_NUM=箱子数量
 BOX_PRICE=箱子单价
-BOX_TOTAL_PRICE=箱子总数
+BOX_TOTAL_PRICE=箱子费用
 FREIGHT=运费
 TOTAL_FREIGHT=总费用
 DOCKING_MAN=对接人
 REMARK=备注
+PROMPT=提示
+SURETODO=确定执行此操作吗？
+selectLeastOneDataRowOperator=请至少选择一行数据操作
 
 
 
