--- a/src/main/resources/static/Resource/i18n/zh/cpgl/PurchaseManager_Detail.properties
+++ b/src/main/resources/static/Resource/i18n/zh/cpgl/PurchaseManager_Detail.properties
@@ -3,7 +3,7 @@ RECEIVE_DATE=进货时间
 SHEET_NO=进货单号
 BOX_NUM=箱子数量
 BOX_PRICE=箱子单价
-BOX_TOTAL_PRICE=箱子总数
+BOX_TOTAL_PRICE=箱子费用
 FREIGHT=运费
 TOTAL_FREIGHT=总费用
 DOCKING_MAN=对接人
